# scraper_for_images

./: LICENSE  README.md  pyproject.toml
bing_ima/: LICENSE  bing.py  bing_streaming.py  head.py  new_bing.py  remove_dup.py  rename.py
bing_image/: __init__.py  main.py
bing_image/core/: WebProcessor.py  stv_parse.py
bing_image/utils/: change_text.py  head.py  utils.py
src/stv_scraper/: main.py
src/stv_scraper/core/: WebProcessor.py  stv_parse.py
src/stv_scraper/utils/: change_text.py  head.py  utils.py
